# fox-mahjongg

./: .gitignore  AUTHORS  FOX-Mahjongg.iss  Makefile.am  README  README.md  build_winsetup.sh  config.rpath  configure.ac  fox-mahjongg.spec  reconfigure.sh  tools_config.h
cpputils/cpputilsshared/: cppdir.cc
cpputils/cpputilsshared/cpputilsformat/: format2.h
images/: .gitignore
liblcdf/: clp.c  gif.h  giffunc.c  gifread.c  giftoc.c  gifx.c  gifx.h  inttypes.h  permstr.cc  permstr.hh  straccum.cc  straccum.hh  string.cc  string.hh  vector.hh  vectorv.cc
m4/: ChangeLog
po/: ChangeLog  POTFILES  POTFILES.in  de.po  fox-mahjongg.pot
share/tiles/: .gitignore
src/: .gitignore  DetectLocale.cc  DetectLocale.h  FXPixelBuffer.cc  FXPixelBuffer.h  FXPixelBufferObject.cc  FXPixelBufferObject.h  FXRadioGroup.cc  FXRadioGroup.h  OutDebug.cc  alarm.cc  alarm.hh  board.cc  board.hh  builtin_layouts.cc  builtin_layouts.h  button.cc  button.hh  colored_output.cc  counter.cc  counter.hh  game.cc  game.hh  gmjts.cc  gmjts.hh  hint.cc  hint.hh  images.cc  images.h  kdets.cc  kdets.hh  kmjts.cc  kmjts.hh  main.cc  main.h  matches.cc  matches.hh  moment.cc  moment.hh  panel.cc  (+35 more)
tools/: theme.cpp  theme.h  thread.cpp
